--- a/StcDemo/framework/src/main/res/layout/f_camera_border.xml
+++ b/StcDemo/framework/src/main/res/layout/f_camera_border.xml
@@ -38,7 +38,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1000"
                     android:orientation="vertical"
-            android:alpha="0">
+                    android:alpha="0">
 
             </LinearLayout>
 
@@ -131,7 +131,8 @@
                       android:layout_gravity="center_horizontal"
                       android:layout_marginTop="30dp">
 
-            <LinearLayout android:layout_width="wrap_content"
+            <LinearLayout android:id="@+id/closed_eyes_layout"
+                          android:layout_width="wrap_content"
                           android:layout_height="match_parent"
                           android:layout_gravity="center_vertical">
 
@@ -142,7 +143,7 @@
                            android:alpha="1"/>
 
                 <TextView android:textAppearance="?android:attr/textAppearanceSmall"
-                          android:text="@string/option_selfie1"
+                          android:text="@string/option_eyes_closed"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_marginLeft="25dp"
@@ -152,7 +153,8 @@
 
             </LinearLayout>
 
-            <LinearLayout android:layout_width="wrap_content"
+            <LinearLayout android:id="@+id/many_faces_layout"
+                          android:layout_width="wrap_content"
                           android:layout_height="match_parent"
                           android:layout_gravity="center_vertical"
                           android:layout_marginTop="5dp">
@@ -164,7 +166,7 @@
                            android:alpha="1"/>
 
                 <TextView android:textAppearance="?android:attr/textAppearanceSmall"
-                          android:text="@string/option_selfie2"
+                          android:text="@string/option_more"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_marginLeft="25dp"
@@ -174,7 +176,8 @@
 
             </LinearLayout>
 
-            <LinearLayout android:layout_width="wrap_content"
+            <LinearLayout android:id="@+id/sunglasses_layout"
+                          android:layout_width="wrap_content"
                           android:layout_height="match_parent"
                           android:layout_gravity="center_vertical"
                           android:layout_marginTop="5dp">
@@ -196,7 +199,8 @@
 
             </LinearLayout>
 
-            <LinearLayout android:layout_width="wrap_content"
+            <LinearLayout android:id="@+id/poor_quality_layout"
+                          android:layout_width="wrap_content"
                           android:layout_height="match_parent"
                           android:layout_gravity="center_vertical"
                           android:layout_marginTop="5dp">
@@ -218,7 +222,8 @@
 
             </LinearLayout>
 
-            <LinearLayout android:layout_width="wrap_content"
+            <LinearLayout android:id="@+id/face_not_found_layout"
+                          android:layout_width="wrap_content"
                           android:layout_height="match_parent"
                           android:layout_gravity="center_vertical"
                           android:layout_marginTop="5dp">
@@ -230,7 +235,7 @@
                            android:alpha="1"/>
 
                 <TextView android:textAppearance="?android:attr/textAppearanceSmall"
-                          android:text="@string/option_selfie5"
+                          android:text="@string/option_no_face"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_marginLeft="25dp"
